istio/all-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe
  labels:
    app: fe   
spec:
  ports:
  - name: grpc
    port: 443   
  selector:
    app: fe
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fe-deployment
  labels:
    app: fe
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: fe
    spec:
      containers:
      - name: fe-container
        image: salrashid123/grpc_backend
        imagePullPolicy: Always        
        ports:
        - containerPort: 443
          name: grpc           
        command: ["/grpc_server"]
        args: ["--grpcport", "0.0.0.0:443", "--insecure"]
