istio/istio-fe.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fe-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  - my-gateway-ilb  
  http:   
  - match: 
    - uri:
        prefix: /  
    route:
    - destination:
        host: fe
        port:
          number: 443   
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: fe-destination
spec:
  host: fe
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  
    loadBalancer:
      simple: ROUND_ROBIN
